# bgwm

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  run.bat
.github/workflows/: ci.yml  release.yml
assets/fonts/: fa-brands.codepoints  fa-regular.codepoints  fa-solid.codepoints
docs/: testing.md
installer/: bgwm.iss  build-installer.ps1
src/: app.rs  font_icons.rs  lib.rs  main.rs  process_job.rs  single_instance.rs
src/config/: mod.rs  schema.rs
src/hotkeys/: hook.rs  mod.rs  parser.rs
src/settings/: executable_picker.rs  mod.rs
src/startup/: mod.rs
src/tray/: icons.rs  mod.rs
src/updater/: http.rs  mod.rs
src/virtual_desktop/: focus.rs  mod.rs
src/window_tracking/: mod.rs  watcher.rs
tests/: config_integration.rs
tools/: generate-app-icon.mjs  package.json
