[package]
name = "bgwm"
version = "0.1.0"
edition = "2021"
description = "Better Windows Workspaces Manager"
license = "MIT"
readme = "README.md"

[lib]
name = "bgwm"
path = "src/lib.rs"

[[bin]]
name = "bgwm"
path = "src/main.rs"

[dependencies]
crossbeam-channel = "0.5"
eframe = { version = "0.31", default-features = true, features = ["default_fonts", "glow"] }
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tray-icon = "0.20"
winvd = { version = "0.0.49", features = ["crossbeam-channel"] }
winit = "0.30"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
    "Win32_System_JobObjects",
] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
